crates/service/tests/diagnostics/snapshots/features__diagnostics__import_with_def__func.snap
---
source: crates/service/tests/diagnostics/import_with_def.rs
expression: response
---
{
  "kind": "full",
  "items": [
    {
      "range": {
        "start": {
          "line": 3,
          "character": 49
        },
        "end": {
          "line": 3,
          "character": 68
        }
      },
      "severity": 1,
      "code": "import-with-def",
      "source": "wat",
      "message": "imported item can't contain definition",
      "relatedInformation": [
        {
          "location": {
            "uri": "untitled:test",
            "range": {
              "start": {
                "line": 3,
                "character": 8
              },
              "end": {
                "line": 3,
                "character": 23
              }
            }
          },
          "message": "import declared here"
        }
      ]
    }
  ]
}
