crates/service/tests/diagnostics/snapshots/features__diagnostics__import_with_def__global.snap
---
source: crates/service/tests/diagnostics/import_with_def.rs
expression: response
---
{
  "kind": "full",
  "items": [
    {
      "range": {
        "start": {
          "line": 4,
          "character": 4
        },
        "end": {
          "line": 4,
          "character": 15
        }
      },
      "severity": 1,
      "code": "import-with-def",
      "source": "wat",
      "message": "imported item can't contain definition",
      "relatedInformation": [
        {
          "location": {
            "uri": "untitled:test",
            "range": {
              "start": {
                "line": 3,
                "character": 10
              },
              "end": {
                "line": 3,
                "character": 25
              }
            }
          },
          "message": "import declared here"
        }
      ]
    },
    {
      "range": {
        "start": {
          "line": 4,
          "character": 15
        },
        "end": {
          "line": 4,
          "character": 16
        }
      },
      "severity": 1,
      "code": "type-check",
      "source": "wat",
      "message": "expected types [i32], found [i32, i32] at the end"
    }
  ]
}
